--- a/src/app/online-booking-module/components/appointmentsluts/appointmentsluts.component.css
+++ b/src/app/online-booking-module/components/appointmentsluts/appointmentsluts.component.css
@@ -11,9 +11,9 @@
  }
 
  ::ng-deep body .p-datepicker .p-datepicker-header {
-     color: #495057;
-     background: #ffffff;
-     font-weight: 900;
+     color: #ffffff;
+     background: #79a0df;
+     font-weight: 500;
      font-size: large;
      margin: 0;
      border-bottom: 1px solid #dee2e6;
@@ -21,12 +21,51 @@
      border-top-left-radius: 3px;
  }
 
+ ::ng-deep body .p-datepicker .p-datepicker-header .p-datepicker-prev {
+     height: 2rem;
+     color: #ffffff;
+     border: 0 none;
+     background: transparent;
+     border-radius: 50%;
+     transition: background-color 0.2s, color 0.2s, box-shadow 0.2s;
+ }
+
+ ::ng-deep body .p-datepicker .p-datepicker-header .p-datepicker-next {
+     height: 2rem;
+     color: #ffffff;
+     border: 0 none;
+     background: transparent;
+     border-radius: 50%;
+     transition: background-color 0.2s, color 0.2s, box-shadow 0.2s;
+ }
+
  ::ng-deep body .p-datepicker table {
-     font-size: 1.5rem;
+     font-size: 1.7rem;
      margin: 0.5rem 0;
+ }
+
+ ::ng-deep body .p-datepicker table td>span.p-highlight {
+     color: #ffffff;
+     background: #79a0df;
+ }
+
+ ::ng-deep body .p-datepicker table td {
+     padding: 0.5rem;
+     border: solid 1px;
  }
 
  /* ::ng-deep body .p-calendar .p-datepicker {
      min-width: 200%;
      margin-left: -7%;
  } */
+
+ ::ng-deep body .p-calendar .p-datepicker {
+     min-width: 100%;
+     border: solid 1px;
+ }
+
+ .p-col-6 {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+ }
