--- a/src/app/online-booking-module/components/appointmentsluts/appointmentsluts.component.html
+++ b/src/app/online-booking-module/components/appointmentsluts/appointmentsluts.component.html
@@ -11,11 +11,14 @@
         <!-- <div class="col-sm-5">
             <img src="../../../../assets/img/1.PNG" width="100%" height="100%">
         </div> -->
-        <div class="col-sm-5" *ngIf="!isLoadingSpinnerEnabled">
+        <div class="col-sm-6" *ngIf="!isLoadingSpinnerEnabled">
+            <div class="p-col-6">
+                <p-calendar [(ngModel)]="SelectedDate" [inline]="true" [showWeek]="false"
+                    [numberOfMonths]="ViewedMonths" (onSelect)="onCallendarSelect()" [minDate]="MinDate"
+                    [maxDate]="MaxDate" [disabledDates]="InvalidDates">
+                </p-calendar>
+            </div>
 
-            <p-calendar [(ngModel)]="SelectedDate" [inline]="true" [showWeek]="true" [numberOfMonths]="ViewedMonths"
-                (onSelect)="onCallendarSelect()" [minDate]="MinDate" [maxDate]="MaxDate" [disabledDates]="InvalidDates">
-            </p-calendar>
         </div>
         <div class="col-sm-3">
         </div>
@@ -28,8 +31,9 @@
 
             </div>
             <div class="col-sm-8">
-                <div class="col-sm-4 offset-sm-2" *ngFor="let slot of ActiveSlots" (click)="onSlotSelect(slot)">
-                    <a class="btn btn-next btn-fill btn-danger btn-wd"
+                <div class="col-sm-2" *ngFor="let slot of ActiveSlots" (click)="onSlotSelect(slot)">
+                    <a style="padding: 10px 12px!important;min-width: 100px!important;"
+                        class="btn btn-next btn-fill btn-danger btn-wd"
                         [class.clickedButton]="slot.id == SelectedSlot.id"
                         [class.defaultButton]="slot.id != SelectedSlot.id">{{formatSlot(slot.start)}}
                         -
