--- a/src/app/online-booking-module/components/appointmentstypes/appointmentstypes.component.html
+++ b/src/app/online-booking-module/components/appointmentstypes/appointmentstypes.component.html
@@ -12,62 +12,62 @@
                 <mat-form-field appearance="fill" style="width: 80%; margin-left: 4%;margin-right:4%;">
                     <mat-label>Click here to select the exam type</mat-label>
                     <mat-select [(ngModel)]="SelectedExamId" (selectionChange)="SelectExam()">
-                        <mat-option *ngFor="let type of DoctorStoreTypeData.AppointmentTypes" value="{{type.id}}">{{
+                        <mat-option *ngFor="let type of DoctorStoreTypeData.AppointmentTypes" [value]="type.id">{{
                             type.name }}
                         </mat-option>
 
-                        <mat-option value="-2">
+                        <mat-option [value]="'-2'">
                             Contact Lens Fitting: Multifocal or Monovision
                         </mat-option>
-                        <mat-option value="-2">
+                        <mat-option [value]="'-2'">
                             Contact Lens Fitting: Single Vision
                         </mat-option>
-                        <mat-option value="-2">
+                        <mat-option [value]="'-2'">
                             Contact Lens Teach: Multifocal or Monovision
                         </mat-option>
-                        <mat-option value="-2">
+                        <mat-option [value]="'-2'">
                             Contact Lens Teach: Single Vision
                         </mat-option>
-                        <mat-option value="-2">
+                        <mat-option [value]="'-2'">
                             Forms
                         </mat-option>
-                        <mat-option value="-2">
+                        <mat-option [value]="'-2'">
                             Laser Post-op
                         </mat-option>
-                        <mat-option value="-2">
+                        <mat-option [value]="'-2'">
                             NIHB (Non-Insured Health Benefits)
                         </mat-option>
-                        <mat-option value="-2">
+                        <mat-option [value]="'-2'">
                             No Charge CL Follow Up
                         </mat-option>
-                        <mat-option value="-2">
+                        <mat-option [value]="'-2'">
                             No Charge Rx Check
                         </mat-option>
-                        <mat-option value="-2">
+                        <mat-option [value]="'-2'">
                             Partial Eye Exam
                         </mat-option>
-                        <mat-option value="-2">
+                        <mat-option [value]="'-2'">
                             Retinal Images
                         </mat-option>
-                        <mat-option value="-2">
+                        <mat-option [value]="'-2'">
                             Visual Field
                         </mat-option>
-                        <mat-option value="-2">
+                        <mat-option [value]="'-2'">
                             OHIP: Partial (V408A)
                         </mat-option>
-                        <mat-option value="-2">
+                        <mat-option [value]="'-2'">
                             OHIP: Visual Fields (V410A)
                         </mat-option>
-                        <mat-option value="-2">
+                        <mat-option [value]="'-2'">
                             OHIP: ODSP (V450A)
                         </mat-option>
-                        <mat-option value="-2">
+                        <mat-option [value]="'-2'">
                             OHIP: Ontario Works (V451A)
                         </mat-option>
-                        <mat-option value="-2">
+                        <mat-option [value]="'-2'">
                             Optical: Sales Rep
                         </mat-option>
-                        <mat-option value="-2">
+                        <mat-option [value]="'-2'">
                             Optical: Troubleshooting
                         </mat-option>
                     </mat-select>
