--- a/src/app/online-booking-module/components/appointmentsluts/appointmentsluts.component.css
+++ b/src/app/online-booking-module/components/appointmentsluts/appointmentsluts.component.css
@@ -1,14 +1,4 @@
- .clickedButton {
-     background-color: #79a0df;
-     color: #fff;
- }
 
- .defaultButton {
-     background-color: #fff;
-     color: #79a0df;
-     border-style: solid;
-     border-color: #79a0df;
- }
 
  ::ng-deep body .p-datepicker .p-datepicker-header {
      color: #ffffff;
@@ -68,3 +58,35 @@
      justify-content: center;
      align-items: center;
  }
+
+
+ a.btn.btn-next.btn-fill.btn-danger.btn-wd.defaultButton {
+
+    padding: 8px 8px 8px 8px;
+    min-width: 90px;
+    border-radius: 13px;
+    background-color: #fff;
+    color: #79a0df;
+    border-style: solid;
+    border-color: #79a0df;
+    }
+    
+    a.btn.btn-next.btn-fill.btn-danger.btn-wd.defaultButton:hover {
+    
+    padding: 8px 8px 8px 8px;
+    min-width: 90px;
+    border-radius: 13px;
+    }
+    
+    
+    a.btn.btn-next.btn-fill.btn-danger.btn-wd.clickedButton {
+    padding: 8px 8px 8px 8px;
+    min-width: 90px;
+    border-radius: 13px;
+    background-color: #79a0df;
+    color: #fff;
+    border-style: solid;
+    border-color: #79a0df;
+    /* color: rebeccapurple; */
+    
+    }
